--- a/src/index.css
+++ b/src/index.css
@@ -6,3 +6,13 @@
 body {
   font-family: sans-serif;
 }
+html {
+  scroll-behavior: smooth;
+}
+/* * {
+  cursor: url('/cursor.png'), auto;
+} */
+
+html {
+  scroll-behavior: smooth;
+}
